# diploma

./: .gitignore  pyproject.toml
benchmarks/: summary.md
corpus/aes_ecb_mode/: _bandit_safe.json  _bandit_vuln.json  _semgrep_safe.json  _semgrep_vuln.json  analogs.md  description.md  expected.json  safe.py  vulnerable.py
corpus/bcrypt_low_rounds/: _bandit_safe.json  _bandit_vuln.json  _semgrep_safe.json  _semgrep_vuln.json  analogs.md  description.md  expected.json  safe.py  vulnerable.py
corpus/jwt_misuse/: _bandit_safe.json  _bandit_vuln.json  _semgrep_safe.json  _semgrep_vuln.json  analogs.md  description.md  expected.json  safe.py  vulnerable.py
corpus/pbkdf2_low_iterations/: _bandit_safe.json  _bandit_vuln.json  _semgrep_safe.json  _semgrep_vuln.json  analogs.md  description.md  expected.json  safe.py  vulnerable.py
corpus/random_lib_for_crypto/: _bandit_safe.json  _bandit_vuln.json  _semgrep_safe.json  _semgrep_vuln.json  analogs.md  cmd_commands.txt  description.md  expected.json  safe.py  vulnerable.py
linter/: __init__.py  __main__.py  cli.py  context.py  core.py  report.py
linter/rules/: __init__.py  aes_ecb.py  bcrypt_low_rounds.py  jwt_misuse.py  pbkdf2_iterations.py  weak_random.py
tests/: test_corpus.py
